--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                        </li>
+
                     </ul>
                     <form class="d-flex" role="search">
 
@@ -120,7 +118,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 gy-3">
+                <div class="col-lg-6 col-md-12 gy-3">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
                             <img src="images/course/course-1.png" class="img-fluid" alt="...">
@@ -132,7 +130,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 gy-3">
+                <div class="col-lg-6 col-md-12 gy-3">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
                             <img src="images/course/course-2.png" class="img-fluid" alt="...">
@@ -147,7 +145,7 @@
 
             </div>
             <div class="row">
-                <div class="col-lg-6 gy-3">
+                <div class="col-lg-6 col-md-12 gy-3">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
                             <img src="images/course/course-3.png" class="img-fluid" alt="...">
@@ -159,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 gy-3">
+                <div class="col-lg-6 col-md-12 gy-3">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
                             <img src="images/course/course-4.png" class="img-fluid" alt="...">
@@ -174,7 +172,7 @@
 
             </div>
             <div class="row">
-                <div class="col-lg-6 gy-3">
+                <div class="col-lg-6 col-md-12 gy-3">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
                             <img src="images/course/course-5.png" class="img-fluid" alt="...">
@@ -186,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 gy-3">
+                <div class="col-lg-6 col-md-12 gy-3">
                     <div class="d-flex align-items-center">
                         <div class="flex-shrink-0">
                             <img src="images/course/course-6.png" class="img-fluid" alt="...">
@@ -207,10 +205,10 @@
 
         <div class="container mt-5">
             <div class="row align-items-center">
-                <div class="col-6">
-                    <img src="images/working.png" alt="">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <img class="img-fluid" src="images/working.png" alt="">
                 </div>
-                <div class="col-6 ">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <h1>Explore The eLearning Institute</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque ab voluptatum possimus
                         tenetur, natus doloribus. Vero voluptatum, nam pariatur qui accusamus asperiores totam, atque
@@ -246,33 +244,25 @@
                     looking at its layout.</p>
             </div>
             <div class="row">
-                <div class="col-lg-3">
-                    <img src="images/student/student-1.png" alt="">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <img class="img-fluid" src="images/student/student-1.png" alt="">
                     <h2>name</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto adipisci aliquid dolores
-                        obcaecati nostrum odit totam veritatis, quae omnis amet praesentium sint sapiente molestiae
-                        corrupti ullam perferendis beatae! Corrupti, fugit.</p>
+                    <p>Backend Developer</p>
                 </div>
-                <div class="col-lg-3">
-                    <img src="images/student/student-2.png" alt="">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <img class="img-fluid" src="images/student/student-2.png" alt="">
                     <h2>name</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto adipisci aliquid dolores
-                        obcaecati nostrum odit totam veritatis, quae omnis amet praesentium sint sapiente molestiae
-                        corrupti ullam perferendis beatae! Corrupti, fugit.</p>
+                    <p>MERN Stack Developer</p>
                 </div>
-                <div class="col-lg-3">
-                    <img src="images/student/student-3.png" alt="">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <img class="img-fluid" src="images/student/student-3.png" alt="">
                     <h2>name</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto adipisci aliquid dolores
-                        obcaecati nostrum odit totam veritatis, quae omnis amet praesentium sint sapiente molestiae
-                        corrupti ullam perferendis beatae! Corrupti, fugit.</p>
+                    <p>Data Analyst</p>
                 </div>
-                <div class="col-lg-3">
-                    <img src="images/student/student-4.png" alt="">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <img class="img-fluid" src="images/student/student-4.png" alt="">
                     <h2>name</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto adipisci aliquid dolores
-                        obcaecati nostrum odit totam veritatis, quae omnis amet praesentium sint sapiente molestiae
-                        corrupti ullam perferendis beatae! Corrupti, fugit.</p>
+                    <p>graphics designer</p>
                 </div>
             </div>
 
