--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ed Tech Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Nunito:ital@0;1&family=Roboto+Mono&family=Work+Sans:ital@0;1&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
+
 </head>
 
 <body>
@@ -71,7 +77,7 @@
                         <h1 style="font-size: 70px;">Get Started Digital <br> Learning</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page when looking at it's layout.</p>
-                        <button>Get Started</button>
+                        <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -81,7 +87,7 @@
                         <h1 style="font-size: 70px;">Get Started Digital <br> Learning</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page when looking at it's layout.</p>
-                        <button>Get Started</button>
+                        <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -91,7 +97,7 @@
                         <h1 style="font-size: 70px;">Get Started Digital <br> Learning</h1>
                         <p>It is a long established fact that a reader will be distracted by the readable content of a
                             page when looking at it's layout.</p>
-                        <button>Get Started</button>
+                        <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
             </div>
@@ -199,7 +205,7 @@
 
             </div>
             <div class="text-center mt-5">
-                <button class="px-5 py-2">See More Courses</button>
+                <button type="button" class="btn btn-primary px-5 py-2">See More Courses</button>
             </div>
         </div>
 
@@ -215,22 +221,22 @@
                         quo consequatur facere aliquam autem expedita? Explicabo corporis atque voluptas totam nulla
                         perspiciatis pariatur aliquid laborum? Cum porro culpa ad qui blanditiis et eaque perferendis
                         voluptatum.</p>
-                    <button>Read More</button>
+                    <button type="button" class="btn btn-primary">Read More</button>
                 </div>
             </div>
         </div>
 
         <div class="container">
             <div class="row d-flex align-items-center bg-danger mt-5  px-3 py-5">
-                <div class="col-6">
+                <div class="col-lg-6 col-md-6 col-sm-6">
                     <h1>Ready to join?</h1>
                     <p>It is a long established fact that a reader will be distracted by the readable content of a page
                         when
                         looking at its layout.</p>
                 </div>
-                <div class="col-6 ">
+                <div class="col-lg-6 col-md-6 col-sm-6 ">
 
-                    <button class="float-end">Register Now</button>
+                    <button type="button" class="btn btn-primary float-end">Register Now</button>
 
                 </div>
             </div>
@@ -246,28 +252,28 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <img class="img-fluid" src="images/student/student-1.png" alt="">
-                    <h2>name</h2>
+                    <h2>Nick</h2>
                     <p>Backend Developer</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <img class="img-fluid" src="images/student/student-2.png" alt="">
-                    <h2>name</h2>
+                    <h2>Sophie</h2>
                     <p>MERN Stack Developer</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <img class="img-fluid" src="images/student/student-3.png" alt="">
-                    <h2>name</h2>
+                    <h2>Jhon</h2>
                     <p>Data Analyst</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12">
                     <img class="img-fluid" src="images/student/student-4.png" alt="">
-                    <h2>name</h2>
-                    <p>graphics designer</p>
+                    <h2>Kayle</h2>
+                    <p>Graphics designer</p>
                 </div>
             </div>
 
             <div class="text-center mt-5">
-                <button class="px-5 py-2">View All</button>
+                <button type="button" class="btn btn-primary px-5 py-2">View All</button>
             </div>
 
 
